# fastapi-study

./: README.md  pyproject.toml
app/: main.py
study/: 1_경로_매개변수.py  2_쿼리_매개변수.py  3_요청_본문(body).py  4_쿼리 매개변수와 문자열 검증.py  5_경로 매개변수와 숫자 검증.py  6_쿼리 매개변수 모델.py  TEST.md  fastapi를 위한 python.md
tests/: test.py
